--- a/app/src/main/res/layout/fragment_fav.xml
+++ b/app/src/main/res/layout/fragment_fav.xml
@@ -1,16 +1,13 @@
-<ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.example.nemus.newspaper2.ListedFrog"
+    android:fillViewport="false">
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.nemus.newspaper2.ListedFrog">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_height="700dp"
-                android:layout_gravity="start"
-                android:id="@+id/fav_listView" />
-        </LinearLayout>
-</ScrollView>
+        android:layout_gravity="start"
+        android:id="@+id/fav_listView" />
+</LinearLayout>
