--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -1,16 +1,10 @@
-<ScrollView
+
+<ListView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.nemus.newspaper2.NewsFrog">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="700dp"
-            android:layout_gravity="start"
-            android:id="@+id/news_listView" />
-    </LinearLayout>
-</ScrollView>
+    android:layout_gravity="start"
+    tools:context="com.example.nemus.newspaper2.NewsFrog"
+    android:id="@+id/news_listView" />
+
