--- a/app/src/main/res/layout/widget_list_row.xml
+++ b/app/src/main/res/layout/widget_list_row.xml
@@ -5,4 +5,5 @@
     android:layout_height="match_parent"
     android:layout_marginTop="3dp"
     android:layout_marginLeft="3dp"
+    android:background="#999"
     />
