--- a/app/src/main/res/layout/new_app_widget.xml
+++ b/app/src/main/res/layout/new_app_widget.xml
@@ -6,4 +6,6 @@
     android:layout_marginTop="3dp"
     android:layout_marginLeft="3dp"
     android:background="#999"
-    />
+    >
+
+</ListView>
