--- a/app/src/main/res/layout/widget_list_row.xml
+++ b/app/src/main/res/layout/widget_list_row.xml
@@ -3,9 +3,10 @@
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textAppearance="?android:attr/textAppearanceLarge"
+
     android:gravity="center_vertical"
     android:paddingLeft="6dip"
     android:textColor="#000"
-    android:minHeight="?android:attr/listPreferredItemHeightLarge"
-    />
+    android:minHeight="100dp"
+    android:textSize="30px"
+    android:maxHeight="200px" />
