--- a/app/src/main/res/layout/new_app_widget.xml
+++ b/app/src/main/res/layout/new_app_widget.xml
@@ -1,11 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
+    >
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/news_button"
+        android:id="@+id/news_button"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/fav_button"
+        android:id="@+id/fav_button"
+        android:layout_alignBottom="@+id/news_button"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/rec_button"
+        android:id="@+id/rec_button"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
+
+<ListView
     android:id="@+id/words"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="3dp"
     android:layout_marginLeft="3dp"
     android:background="#999"
-    >
+    android:layout_below="@+id/fav_button">
 
 </ListView>
+
+
+</RelativeLayout>
