--- a/app/src/main/res/layout/widget_list_row.xml
+++ b/app/src/main/res/layout/widget_list_row.xml
@@ -6,7 +6,9 @@
 
     android:gravity="center_vertical"
     android:paddingLeft="6dip"
+    android:singleLine="true"
     android:textColor="#000"
-    android:minHeight="100dp"
-    android:textSize="30px"
-    android:maxHeight="200px" />
+    android:minHeight="50dp"
+    android:textSize="20sp"
+    android:maxHeight="70dp"
+    android:text="test"/>
