--- a/app/src/main/res/layout/fragment_rec.xml
+++ b/app/src/main/res/layout/fragment_rec.xml
@@ -10,4 +10,10 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:id="@+id/rec_listView" />
+        <TextView android:id="@+id/empty"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="20dp"
+            android:textSize="25dp"
+            android:text="No Results" />
 </LinearLayout>
