--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_content"
@@ -7,6 +8,11 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context="com.example.nemus.newspaper2.MainActivity">
+
+    <com.example.nemus.newspaper2.DragandDrop.DragLayer
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/drag_layer">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -38,6 +44,8 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="110dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    </com.example.nemus.newspaper2.DragandDrop.DragLayer>
 
 </android.support.design.widget.CoordinatorLayout>
