--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -1,11 +1,12 @@
 
 <LinearLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context="com.example.nemus.newspaper2.NewsFrog"
-android:fillViewport="false">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.example.nemus.newspaper2.NewsFrog"
+    android:fillViewport="false"
+    android:orientation="horizontal">
 <ListView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,4 +19,5 @@ android:fillViewport="false">
     android:textSize="25dp"
     android:text="No Results" />
 </LinearLayout>
+
 
